Upgraded package-lock.json & removed yarn.lock

--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "prettier": "^1.18.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "main": "n/a",
   "repository": {
